# industrial_bridge

./: Cargo.toml  README.md  config.yaml
docs/: HOW-TO-ADD-DEVICE.md  HOW-TO-ADD-REMOTES.md  USE.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: app_config.rs  devices.rs  main.rs  modbus.rs  remotes.rs  types_conversion.rs
src/devices/: errors.rs  modbus_rtu.rs  modbus_tcp.rs  s7.rs
src/remotes/: errors.rs  influxdb.rs  prometheus.rs  remote.rs
