[package]
name = "industrial_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modbus_device = { git = "https://github.com/lkzjdnb/modbus_device.git", branch = "async"}
s7_device = { git = "https://github.com/lkzjdnb/S7_devices.git"}
clap = { version = "4.5.9", features = ["derive"] }
config = { version = "0.14.0", features = ["yaml", "toml"] }
env_logger = "0.11.3"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
backoff = { version = "0.4.0", features = ["tokio"] }
tokio-modbus = "0.13.1"
influxdb = "0.7.2"
chrono = "0.4.38"
prometheus_push = { version = "0.4.5", features = ["prometheus_crate", "with_reqwest"], default-features = false }
reqwest = { version = "0.12.5", features = ["rustls-tls"], default-features = false }
prometheus = "0.13.4"
url = "2.5.2"
s7-client = "0.1.2"
